force-app/main/default/objects/Added_Product__c/Added_Product__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Activation line added product</label>
</CustomObject>