force-app/main/default/objects/Added_Product__c/fields/Afslutning_i_media_converter__c.field-meta.xml
<CustomField>
    <fullName>Afslutning_i_media_converter__c</fullName>
    <defaultValue>&quot;21401&quot;</defaultValue>
    <label>Afslutning i media converter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>