force-app/main/default/objects/Added_Product__c/fields/Afslutning_i_ODF__c.field-meta.xml
<CustomField>
    <fullName>Afslutning_i_ODF__c</fullName>
    <defaultValue>&quot;21402&quot;</defaultValue>
    <label>Afslutning i ODF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>