force-app/main/default/objects/Added_Product__c/fields/Afslutning_i_router__c.field-meta.xml
<CustomField>
    <fullName>Afslutning_i_router__c</fullName>
    <defaultValue>&quot;21400&quot;</defaultValue>
    <label>Afslutning i router</label>
    <length>255</length>
    <type>Text</type>
</CustomField>