force-app/main/default/objects/Added_Product__c/fields/Barring_3G_settings__c.field-meta.xml
<CustomField>
    <fullName>Barring_3G_settings__c</fullName>
    <defaultValue>&quot;16400&quot;</defaultValue>
    <label>Barring 3G settings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>