force-app/main/default/objects/Added_Product__c/fields/Barring_4G_settings__c.field-meta.xml
<CustomField>
    <fullName>Barring_4G_settings__c</fullName>
    <defaultValue>&quot;16401&quot;</defaultValue>
    <label>Barring 4G settings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>