force-app/main/default/objects/Added_Product__c/fields/Barring_data_services__c.field-meta.xml
<CustomField>
    <fullName>Barring_data_services__c</fullName>
    <defaultValue>&quot;16402&quot;</defaultValue>
    <label>Barring data services</label>
    <length>255</length>
    <type>Text</type>
</CustomField>