force-app/main/default/objects/Added_Product__c/fields/Barring_International_Roaming__c.field-meta.xml
<CustomField>
    <fullName>Barring_International_Roaming__c</fullName>
    <defaultValue>&quot;16403&quot;</defaultValue>
    <label>Barring International Roaming</label>
    <length>255</length>
    <type>Text</type>
</CustomField>