force-app/main/default/objects/Added_Product__c/fields/Barring_MMS__c.field-meta.xml
<CustomField>
    <fullName>Barring_MMS__c</fullName>
    <defaultValue>&quot;16404&quot;</defaultValue>
    <label>Barring MMS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>