force-app/main/default/objects/Added_Product__c/fields/Barring_National_Intl_roamin__c.field-meta.xml
<CustomField>
    <fullName>Barring_National_Intl_roamin__c</fullName>
    <defaultValue>&quot;16405&quot;</defaultValue>
    <label>Barring National &amp; Intl roamin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>