force-app/main/default/objects/Added_Product__c/fields/Corporate_Fri_tale_DK_til_EU__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Fri_tale_DK_til_EU__c</fullName>
    <defaultValue>&quot;11200&quot;</defaultValue>
    <label>Corporate Fri tale DK til EU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>