force-app/main/default/objects/Added_Product__c/fields/DN_Access_Basic_4G_Antenne_pakke_1_DK__c.field-meta.xml
<CustomField>
    <fullName>DN_Access_Basic_4G_Antenne_pakke_1_DK__c</fullName>
    <defaultValue>&quot;83300&quot;</defaultValue>
    <label>DN Access Basic 4G Antenne pakke 1 - DK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>