force-app/main/default/objects/Added_Product__c/fields/DN_QoS_Basic__c.field-meta.xml
<CustomField>
    <fullName>DN_QoS_Basic__c</fullName>
    <defaultValue>&quot;81306&quot;</defaultValue>
    <label>DN QoS - Basic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>