force-app/main/default/objects/Added_Product__c/fields/DN_QoS_Premium_10_Mbit_s__c.field-meta.xml
<CustomField>
    <fullName>DN_QoS_Premium_10_Mbit_s__c</fullName>
    <defaultValue>&quot;82402&quot;</defaultValue>
    <label>DN QoS - Premium: 10 Mbit/s</label>
    <length>255</length>
    <type>Text</type>
</CustomField>