force-app/main/default/objects/Added_Product__c/fields/DN_QoS_Premium_300_Kbit_s__c.field-meta.xml
<CustomField>
    <fullName>DN_QoS_Premium_300_Kbit_s__c</fullName>
    <defaultValue>&quot;81400&quot;</defaultValue>
    <label>DN QoS - Premium: 300 Kbit/s</label>
    <length>255</length>
    <type>Text</type>
</CustomField>