force-app/main/default/objects/Added_Product__c/fields/DN_QoS_Premium_600_Kbit_s__c.field-meta.xml
<CustomField>
    <fullName>DN_QoS_Premium_600_Kbit_s__c</fullName>
    <defaultValue>&quot;81401&quot;</defaultValue>
    <label>DN QoS - Premium: 600 Kbit/s</label>
    <length>255</length>
    <type>Text</type>
</CustomField>