force-app/main/default/objects/Added_Product__c/fields/DN_QoS_Realtime_150_Mbit_s__c.field-meta.xml
<CustomField>
    <fullName>DN_QoS_Realtime_150_Mbit_s__c</fullName>
    <defaultValue>&quot;82311&quot;</defaultValue>
    <label>DN QoS - Realtime: 150 Mbit/s</label>
    <length>255</length>
    <type>Text</type>
</CustomField>