force-app/main/default/objects/Added_Product__c/fields/DN_SLA_Packet_A_24_DK__c.field-meta.xml
<CustomField>
    <fullName>DN_SLA_Packet_A_24_DK__c</fullName>
    <defaultValue>&quot;83400&quot;</defaultValue>
    <label>DN SLA Packet A 24 - DK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>