force-app/main/default/objects/Added_Product__c/fields/DN_SLA_Packet_C_8_Fiber__c.field-meta.xml
<CustomField>
    <fullName>DN_SLA_Packet_C_8_Fiber__c</fullName>
    <defaultValue>&quot;82502&quot;</defaultValue>
    <label>DN SLA Packet C 8 - Fiber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>