force-app/main/default/objects/Added_Product__c/fields/DN_SLA_Packet_D_15_Fiber__c.field-meta.xml
<CustomField>
    <fullName>DN_SLA_Packet_D_15_Fiber__c</fullName>
    <defaultValue>&quot;82504&quot;</defaultValue>
    <label>DN SLA Packet D-15 - Fiber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>