force-app/main/default/objects/Added_Product__c/fields/DN_VAS_Internet_on_Site_DSL__c.field-meta.xml
<CustomField>
    <fullName>DN_VAS_Internet_on_Site_DSL__c</fullName>
    <defaultValue>&quot;81201&quot;</defaultValue>
    <label>DN VAS Internet on Site DSL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>