force-app/main/default/objects/Added_Product__c/fields/DN_VAS_Internet_on_Site_Fiber__c.field-meta.xml
<CustomField>
    <fullName>DN_VAS_Internet_on_Site_Fiber__c</fullName>
    <defaultValue>&quot;82201&quot;</defaultValue>
    <label>DN VAS Internet on Site Fiber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>