force-app/main/default/objects/Added_Product__c/fields/DN_VAS_Multiple_VPN_DSL__c.field-meta.xml
<CustomField>
    <fullName>DN_VAS_Multiple_VPN_DSL__c</fullName>
    <defaultValue>&quot;81200&quot;</defaultValue>
    <label>DN VAS Multiple VPN DSL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>