force-app/main/default/objects/Added_Product__c/fields/DN_VAS_Multiple_VPN_Fiber__c.field-meta.xml
<CustomField>
    <fullName>DN_VAS_Multiple_VPN_Fiber__c</fullName>
    <defaultValue>&quot;82200&quot;</defaultValue>
    <label>DN VAS Multiple VPN Fiber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>