force-app/main/default/objects/Added_Product__c/fields/DN_VAS_Quick_Launch_Backup_DK__c.field-meta.xml
<CustomField>
    <fullName>DN_VAS_Quick_Launch_Backup_DK__c</fullName>
    <defaultValue>&quot;83201&quot;</defaultValue>
    <label>DN VAS Quick-Launch Backup - DK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>