force-app/main/default/objects/Added_Product__c/fields/Ekstra_datakort_nummer_2_kort__c.field-meta.xml
<CustomField>
    <fullName>Ekstra_datakort_nummer_2_kort__c</fullName>
    <defaultValue>&quot;11210&quot;</defaultValue>
    <label>Ekstra datakort – nummer 2 kort</label>
    <length>255</length>
    <type>Text</type>
</CustomField>