force-app/main/default/objects/Added_Product__c/fields/Ekstra_kontaktperson__c.field-meta.xml
<CustomField>
    <fullName>Ekstra_kontaktperson__c</fullName>
    <defaultValue>&quot;42100&quot;</defaultValue>
    <label>Ekstra kontaktperson</label>
    <length>255</length>
    <type>Text</type>
</CustomField>