force-app/main/default/objects/Added_Product__c/fields/Ekstra_SIM_kort_BtB__c.field-meta.xml
<CustomField>
    <fullName>Ekstra_SIM_kort_BtB__c</fullName>
    <defaultValue>&quot;11201&quot;</defaultValue>
    <label>Ekstra SIM-kort BtB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>