force-app/main/default/objects/Added_Product__c/fields/F2M_Fixed_to_mobile__c.field-meta.xml
<CustomField>
    <fullName>F2M_Fixed_to_mobile__c</fullName>
    <defaultValue>&quot;11207&quot;</defaultValue>
    <label>F2M Fixed to mobile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>