force-app/main/default/objects/Added_Product__c/fields/Flipp__c.field-meta.xml
<CustomField>
    <fullName>Flipp__c</fullName>
    <defaultValue>&quot;32303&quot;</defaultValue>
    <label>Flipp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>