force-app/main/default/objects/Added_Product__c/fields/Forbrugskontrol__c.field-meta.xml
<CustomField>
    <fullName>Forbrugskontrol__c</fullName>
    <defaultValue>&quot;16406&quot;</defaultValue>
    <label>Forbrugskontrol</label>
    <length>255</length>
    <type>Text</type>
</CustomField>