force-app/main/default/objects/Added_Product__c/fields/HBO__c.field-meta.xml
<CustomField>
    <fullName>HBO__c</fullName>
    <defaultValue>&quot;11208&quot;</defaultValue>
    <label>HBO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>