force-app/main/default/objects/Added_Product__c/fields/HBO_Nordic__c.field-meta.xml
<CustomField>
    <fullName>HBO_Nordic__c</fullName>
    <defaultValue>&quot;32301&quot;</defaultValue>
    <label>HBO Nordic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>