force-app/main/default/objects/Added_Product__c/fields/M2M_100_SMS_pakke__c.field-meta.xml
<CustomField>
    <fullName>M2M_100_SMS_pakke__c</fullName>
    <defaultValue>&quot;14306&quot;</defaultValue>
    <label>M2M 100 SMS pakke</label>
    <length>255</length>
    <type>Text</type>
</CustomField>