force-app/main/default/objects/Added_Product__c/fields/M2M_10MB_Data_pakke__c.field-meta.xml
<CustomField>
    <fullName>M2M_10MB_Data_pakke__c</fullName>
    <defaultValue>&quot;14302&quot;</defaultValue>
    <label>M2M 10MB Data pakke</label>
    <length>255</length>
    <type>Text</type>
</CustomField>