force-app/main/default/objects/Added_Product__c/fields/M2M_200MB_Data_pakke__c.field-meta.xml
<CustomField>
    <fullName>M2M_200MB_Data_pakke__c</fullName>
    <defaultValue>&quot;14310&quot;</defaultValue>
    <label>M2M 200MB Data pakke</label>
    <length>255</length>
    <type>Text</type>
</CustomField>