force-app/main/default/objects/Added_Product__c/fields/M2M_Roaming__c.field-meta.xml
<CustomField>
    <fullName>M2M_Roaming__c</fullName>
    <defaultValue>&quot;14300&quot;</defaultValue>
    <label>M2M Roaming</label>
    <length>255</length>
    <type>Text</type>
</CustomField>