force-app/main/default/objects/Added_Product__c/fields/Mitel_6865i__c.field-meta.xml
<CustomField>
    <fullName>Mitel_6865i__c</fullName>
    <defaultValue>&quot;12900&quot;</defaultValue>
    <label>Mitel 6865i</label>
    <length>255</length>
    <type>Text</type>
</CustomField>