force-app/main/default/objects/Added_Product__c/fields/Mitel_6867i__c.field-meta.xml
<CustomField>
    <fullName>Mitel_6867i__c</fullName>
    <defaultValue>&quot;12901&quot;</defaultValue>
    <label>Mitel 6867i</label>
    <length>255</length>
    <type>Text</type>
</CustomField>