force-app/main/default/objects/Added_Product__c/fields/Mitel_6869i__c.field-meta.xml
<CustomField>
    <fullName>Mitel_6869i__c</fullName>
    <defaultValue>&quot;12902&quot;</defaultValue>
    <label>Mitel 6869i</label>
    <length>255</length>
    <type>Text</type>
</CustomField>