force-app/main/default/objects/Added_Product__c/fields/MS_Teams_konfig_ekstra_bruger_partner__c.field-meta.xml
<CustomField>
    <fullName>MS_Teams_konfig_ekstra_bruger_partner__c</fullName>
    <defaultValue>&quot;12610&quot;</defaultValue>
    <label>MS Teams konfig ekstra bruger - partner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>