force-app/main/default/objects/Added_Product__c/fields/MS_Teams_udvidet_konfig_partner__c.field-meta.xml
<CustomField>
    <fullName>MS_Teams_udvidet_konfig_partner__c</fullName>
    <defaultValue>&quot;12609&quot;</defaultValue>
    <label>MS Teams udvidet konfig - partner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>