force-app/main/default/objects/Added_Product__c/fields/Office_365__c.field-meta.xml
<CustomField>
    <fullName>Office_365__c</fullName>
    <defaultValue>&quot;32305&quot;</defaultValue>
    <label>Office 365</label>
    <length>255</length>
    <type>Text</type>
</CustomField>