force-app/main/default/objects/Added_Product__c/fields/Owner_Control__c.field-meta.xml
<CustomField>
    <fullName>Owner_Control__c</fullName>
    <defaultValue>&quot;16417&quot;</defaultValue>
    <label>Owner Control</label>
    <length>255</length>
    <type>Text</type>
</CustomField>