force-app/main/default/objects/Added_Product__c/fields/SLA_DSL_Basic__c.field-meta.xml
<CustomField>
    <fullName>SLA_DSL_Basic__c</fullName>
    <defaultValue>&quot;22200&quot;</defaultValue>
    <label>SLA DSL Basic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>