force-app/main/default/objects/Added_Product__c/fields/SLA_DSL_Plus__c.field-meta.xml
<CustomField>
    <fullName>SLA_DSL_Plus__c</fullName>
    <defaultValue>&quot;22201&quot;</defaultValue>
    <label>SLA DSL Plus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>