force-app/main/default/objects/Added_Product__c/fields/SLA_DSL_Premium__c.field-meta.xml
<CustomField>
    <fullName>SLA_DSL_Premium__c</fullName>
    <defaultValue>&quot;22202&quot;</defaultValue>
    <label>SLA DSL Premium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>