force-app/main/default/objects/Added_Product__c/fields/SLA_Fiber_Basic__c.field-meta.xml
<CustomField>
    <fullName>SLA_Fiber_Basic__c</fullName>
    <defaultValue>&quot;21200&quot;</defaultValue>
    <label>SLA Fiber Basic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>