force-app/main/default/objects/Added_Product__c/fields/SLA_Fiber_Plus__c.field-meta.xml
<CustomField>
    <fullName>SLA_Fiber_Plus__c</fullName>
    <defaultValue>&quot;21201&quot;</defaultValue>
    <label>SLA Fiber Plus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>