force-app/main/default/objects/Added_Product__c/fields/SLA_Fiber_Premium__c.field-meta.xml
<CustomField>
    <fullName>SLA_Fiber_Premium__c</fullName>
    <defaultValue>&quot;21202&quot;</defaultValue>
    <label>SLA Fiber Premium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>