force-app/main/default/objects/Added_Product__c/fields/SLA_Home_Office_Udvidet__c.field-meta.xml
<CustomField>
    <fullName>SLA_Home_Office_Udvidet__c</fullName>
    <defaultValue>&quot;32100&quot;</defaultValue>
    <label>SLA Home Office Udvidet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>