force-app/main/default/objects/Added_Product__c/fields/SLA_TPX_Basic__c.field-meta.xml
<CustomField>
    <fullName>SLA_TPX_Basic__c</fullName>
    <defaultValue>&quot;15100&quot;</defaultValue>
    <label>SLA TPX Basic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>