force-app/main/default/objects/Added_Product__c/fields/SLA_TPX_Plus__c.field-meta.xml
<CustomField>
    <fullName>SLA_TPX_Plus__c</fullName>
    <defaultValue>&quot;15101&quot;</defaultValue>
    <label>SLA TPX Plus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>