force-app/main/default/objects/Added_Product__c/fields/SLA_TPX_Premium__c.field-meta.xml
<CustomField>
    <fullName>SLA_TPX_Premium__c</fullName>
    <defaultValue>&quot;15102&quot;</defaultValue>
    <label>SLA TPX Premium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>