force-app/main/default/objects/Added_Product__c/fields/Sp_r_alle_indg_ende_opkald__c.field-meta.xml
<CustomField>
    <fullName>Sp_r_alle_indg_ende_opkald__c</fullName>
    <defaultValue>&quot;16407&quot;</defaultValue>
    <label>Spær alle indgående opkald</label>
    <length>255</length>
    <type>Text</type>
</CustomField>