force-app/main/default/objects/Added_Product__c/fields/Sp_r_indg_opkald_i_udlandet__c.field-meta.xml
<CustomField>
    <fullName>Sp_r_indg_opkald_i_udlandet__c</fullName>
    <defaultValue>&quot;16409&quot;</defaultValue>
    <label>Spær indg. opkald i udlandet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>