force-app/main/default/objects/Added_Product__c/fields/Sp_r_indholdstakseret_SMS__c.field-meta.xml
<CustomField>
    <fullName>Sp_r_indholdstakseret_SMS__c</fullName>
    <defaultValue>&quot;16410&quot;</defaultValue>
    <label>Spær indholdstakseret SMS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>