force-app/main/default/objects/Added_Product__c/fields/Sp_r_opkald_til_90_numre__c.field-meta.xml
<CustomField>
    <fullName>Sp_r_opkald_til_90_numre__c</fullName>
    <defaultValue>&quot;16411&quot;</defaultValue>
    <label>Spær opkald til 90 numre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>