force-app/main/default/objects/Added_Product__c/fields/Sp_r_udg_fra_udl_undt_til_DK__c.field-meta.xml
<CustomField>
    <fullName>Sp_r_udg_fra_udl_undt_til_DK__c</fullName>
    <defaultValue>&quot;16412&quot;</defaultValue>
    <label>Spær udg. fra udl. undt til DK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>