force-app/main/default/objects/Added_Product__c/fields/Sp_r_udg_opkald_fra_udlandet__c.field-meta.xml
<CustomField>
    <fullName>Sp_r_udg_opkald_fra_udlandet__c</fullName>
    <defaultValue>&quot;16413&quot;</defaultValue>
    <label>Spær udg. opkald fra udlandet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>