force-app/main/default/objects/Added_Product__c/fields/Sp_r_udg_opkald_til_int_nr__c.field-meta.xml
<CustomField>
    <fullName>Sp_r_udg_opkald_til_int_nr__c</fullName>
    <defaultValue>&quot;16414&quot;</defaultValue>
    <label>Spær udg. opkald til int. nr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>