force-app/main/default/objects/Added_Product__c/fields/Spotify__c.field-meta.xml
<CustomField>
    <fullName>Spotify__c</fullName>
    <defaultValue>&quot;11209&quot;</defaultValue>
    <label>Spotify</label>
    <length>255</length>
    <type>Text</type>
</CustomField>