force-app/main/default/objects/Added_Product__c/fields/Spotify_Premium__c.field-meta.xml
<CustomField>
    <fullName>Spotify_Premium__c</fullName>
    <defaultValue>&quot;32300&quot;</defaultValue>
    <label>Spotify Premium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>