force-app/main/default/objects/Added_Product__c/fields/Standard_GSM_Barring__c.field-meta.xml
<CustomField>
    <fullName>Standard_GSM_Barring__c</fullName>
    <defaultValue>&quot;16415&quot;</defaultValue>
    <label>Standard GSM Barring</label>
    <length>255</length>
    <type>Text</type>
</CustomField>