force-app/main/default/objects/Added_Product__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;11206&quot;</defaultValue>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>