force-app/main/default/objects/Added_Product__c/fields/Telia_INSIGHT_Abonnent_Overblik__c.field-meta.xml
<CustomField>
    <fullName>Telia_INSIGHT_Abonnent_Overblik__c</fullName>
    <defaultValue>&quot;43103&quot;</defaultValue>
    <label>Telia INSIGHT+ Abonnent Overblik</label>
    <length>255</length>
    <type>Text</type>
</CustomField>