force-app/main/default/objects/Added_Product__c/fields/Telia_INSIGHT_Forbrugs_Detaljer__c.field-meta.xml
<CustomField>
    <fullName>Telia_INSIGHT_Forbrugs_Detaljer__c</fullName>
    <defaultValue>&quot;43105&quot;</defaultValue>
    <label>Telia INSIGHT+ Forbrugs Detaljer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>