force-app/main/default/objects/Added_Product__c/fields/Telia_INSIGHT_International_Roaming__c.field-meta.xml
<CustomField>
    <fullName>Telia_INSIGHT_International_Roaming__c</fullName>
    <defaultValue>&quot;43104&quot;</defaultValue>
    <label>Telia INSIGHT+ International Roaming</label>
    <length>255</length>
    <type>Text</type>
</CustomField>