force-app/main/default/objects/Added_Product__c/fields/Telia_INSIGHT_Seneste_Faktura__c.field-meta.xml
<CustomField>
    <fullName>Telia_INSIGHT_Seneste_Faktura__c</fullName>
    <defaultValue>&quot;43101&quot;</defaultValue>
    <label>Telia INSIGHT+ Seneste Faktura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>