force-app/main/default/objects/Added_Product__c/fields/Telia_Nummerdeling_teknisk__c.field-meta.xml
<CustomField>
    <fullName>Telia_Nummerdeling_teknisk__c</fullName>
    <defaultValue>&quot;T18100&quot;</defaultValue>
    <label>Telia Nummerdeling - teknisk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>