force-app/main/default/objects/Added_Product__c/fields/Telia_Roaming_World_5_GB__c.field-meta.xml
<CustomField>
    <fullName>Telia_Roaming_World_5_GB__c</fullName>
    <defaultValue>&quot;11205&quot;</defaultValue>
    <label>Telia Roaming World 5 GB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>