force-app/main/default/objects/Added_Product__c/fields/Telia_Secure__c.field-meta.xml
<CustomField>
    <fullName>Telia_Secure__c</fullName>
    <defaultValue>&quot;32304&quot;</defaultValue>
    <label>Telia Secure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>