force-app/main/default/objects/Added_Product__c/fields/Total_Barring_of_outgoing_call__c.field-meta.xml
<CustomField>
    <fullName>Total_Barring_of_outgoing_call__c</fullName>
    <defaultValue>&quot;16416&quot;</defaultValue>
    <label>Total Barring of outgoing call</label>
    <length>255</length>
    <type>Text</type>
</CustomField>