force-app/main/default/objects/Added_Product__c/fields/Touchpoint_Bruger__c.field-meta.xml
<CustomField>
    <fullName>Touchpoint_Bruger__c</fullName>
    <defaultValue>&quot;T17102&quot;</defaultValue>
    <label>Touchpoint Bruger (Active)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>