force-app/main/default/objects/Added_Product__c/fields/Touchpoint_Bruger_Future__c.field-meta.xml
<CustomField>
    <fullName>Touchpoint_Bruger_Future__c</fullName>
    <defaultValue>&quot;T17103&quot;</defaultValue>
    <label>Touchpoint Bruger (Future)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>