force-app/main/default/objects/Added_Product__c/fields/Touchpoint_Receptionist__c.field-meta.xml
<CustomField>
    <fullName>Touchpoint_Receptionist__c</fullName>
    <defaultValue>&quot;T17110&quot;</defaultValue>
    <label>Touchpoint Receptionist (Active)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>