force-app/main/default/objects/Added_Product__c/fields/Touchpoint_Receptionist_Future__c.field-meta.xml
<CustomField>
    <fullName>Touchpoint_Receptionist_Future__c</fullName>
    <defaultValue>&quot;T17111&quot;</defaultValue>
    <label>Touchpoint Receptionist (Future)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>