force-app/main/default/objects/Added_Product__c/fields/Touchpoint_Softphone__c.field-meta.xml
<CustomField>
    <fullName>Touchpoint_Softphone__c</fullName>
    <defaultValue>&quot;T17108&quot;</defaultValue>
    <label>Touchpoint Softphone (Active)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>