force-app/main/default/objects/Added_Product__c/fields/Touchpoint_Softphone_Future__c.field-meta.xml
<CustomField>
    <fullName>Touchpoint_Softphone_Future__c</fullName>
    <defaultValue>&quot;T17109&quot;</defaultValue>
    <label>Touchpoint Softphone (Future)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>