force-app/main/default/objects/Added_Product__c/fields/Touchpoint_Statistik__c.field-meta.xml
<CustomField>
    <fullName>Touchpoint_Statistik__c</fullName>
    <defaultValue>&quot;T17130&quot;</defaultValue>
    <label>Touchpoint Statistik (Active)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>