force-app/main/default/objects/Added_Product__c/fields/Touchpoint_Statistik_Future__c.field-meta.xml
<CustomField>
    <fullName>Touchpoint_Statistik_Future__c</fullName>
    <defaultValue>&quot;T17131&quot;</defaultValue>
    <label>Touchpoint Statistik (Future)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>