force-app/main/default/objects/Added_Product__c/fields/TPX_ACD_med_15_I_k__c.field-meta.xml
<CustomField>
    <fullName>TPX_ACD_med_15_I_k__c</fullName>
    <defaultValue>&quot;12202&quot;</defaultValue>
    <label>TPX ACD med 15 I kø</label>
    <length>255</length>
    <type>Text</type>
</CustomField>