force-app/main/default/objects/Added_Product__c/fields/TPX_ATA_funktion_Fastnetnr__c.field-meta.xml
<CustomField>
    <fullName>TPX_ATA_funktion_Fastnetnr__c</fullName>
    <defaultValue>&quot;12107&quot;</defaultValue>
    <label>TPX ATA funktion Fastnetnr.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>