force-app/main/default/objects/Added_Product__c/fields/TPX_ATA_funktion_Mobilnr__c.field-meta.xml
<CustomField>
    <fullName>TPX_ATA_funktion_Mobilnr__c</fullName>
    <defaultValue>&quot;12106&quot;</defaultValue>
    <label>TPX ATA funktion Mobilnr.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>