force-app/main/default/objects/Added_Product__c/fields/TPX_Attendant_Agent_login__c.field-meta.xml
<CustomField>
    <fullName>TPX_Attendant_Agent_login__c</fullName>
    <defaultValue>&quot;12207&quot;</defaultValue>
    <label>TPX Attendant Agent login</label>
    <length>255</length>
    <type>Text</type>
</CustomField>